Fix issue with improperly wrapping header keys

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -763,6 +763,7 @@ dl.vars {
     word-break: break-all;
     padding-right: 10px;
     font-size: 15px;
+    clear: both;
   }
 
   pre {
